Fix styling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@ html {
 	font-size: 62.5%;
 }
 
+html, body {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+}
+
 body {
 	background-image: url("../images/background.jpg");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-
-	width: 100%;
-	height: 100%;
-
-	width: 100vw;
-	height: 100vh;
 
 	display: block;
 
